frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: frontend
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - image: matheoleger/frontend:latest
        name: frontend
        ports:
        - containerPort: 3000
          name: frontend
        imagePullPolicy: Always
