order-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: order-service
  name: order-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
      - image: matheoleger/order-service:
        name: order-service
        ports:
        - containerPort: 3002
          name: order-service
        imagePullPolicy: Always
