user-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: user-service
  name: user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
      - image: matheoleger/user-service:0.7.0
        name: user-service
        ports:
        - containerPort: 3001
          name: user-service
        imagePullPolicy: Always
