user-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service-service
# spec:
#   type: ClusterIP
#   ports:
#   - port: 3001
#     targetPort: 3001
#   selector:
#     app: user-service
  
# I need a NodePort because of requests from React... (it's client request so we need to access outside the cluster)
spec:
  selector:
    app: user-service
  type: NodePort
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
      nodePort: 31001
